tests/paczka1/fuzzy1/59965957.err
Error in line 26: Ocmkc2B S736 124,3
Error in line 21: A346 S736 69,3
Error in line 22: k5Wz A160 87,6
